# chessvec

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
benchmarks/: bench_breakdown.py  bench_breakdown_nn.py  bench_legal_mask.py  bench_mcts.py  bench_step.py
src/chessvec/: __init__.py  action_encoding.py  reference.py  triton_step.py  types.py  vectorized.py
tests/: test_action_encoding.py  test_parity.py  test_reference.py  test_rollout.py  test_triton_step.py  test_vectorized.py
